Hand-written clang bindings